--- a/style.css
+++ b/style.css
@@ -2,68 +2,175 @@
 box-sizing:border-box}
 
 header{display: flex;
+    justify-content: space-around;
 height: 47px;
 background-color: #f5f5f5;
 padding: 15px;}
+
 header>div{
     font-size: 15px;
+    display: flex;
+    padding-left: 15px;
 }
-
-header svg{color: black;
-    height: 15px;
-    margin-left: 350px;}
+#redes{color: black;}
+header svg{margin-left: 25px;
+height: 15px;}
+#anguage{padding-right: 15px;}
 
 #main{display: grid;
 grid-template-columns: 1.3fr 1fr 1fr 1fr 1fr 1.3fr;
 grid-template-rows: 80px 80px 431px 263px;
 }
+#main>div{border:solid 1px;}
 
-#main>div{ border: solid 1px;}
 
 #logo{ grid-column: 2;}
 
 #nav{display: flex;
 grid-column: 3/6;
-font-size: 20px;
+font-size: 15px;
 justify-content: space-around;
-padding: 12px;
+padding: 20px;
 font-family: "Cairo", sans-serif;
+}
+#item{display: flex;
+height: 18px;
+padding-left: 0px;
+justify-items: center;
 }
 
 #menu{grid-column: 2;
 grid-row: 2/4;}
+#alldepart{
+padding: 10px 28px;
+    font-size: 14px;
+    color: #ffffff;
+    font-family: "Cairo", sans-serif;
+    font-weight: 700px;
+    background: #7fad39;
+    text-transform: uppercase;} 
+
 
 #busca{grid-column: 3/6;
 grid-row: 2;
-border: 2px;}
-#all{font-size: 10px;}
-
+border: 2px;
+display: flex;}
+#all{font-size: 16px;
+width: 25%;
+color: #1c1c1c;
+padding-left: 20px;
+padding-top: 10px;
+font-family: "Cairo", sans-serif;
+font-weight: 700;}
+#textobus{padding-top: 10px;
+width: 40%;
+font-family: "Cairo", sans-serif;
+font-weight: 100;
+opacity: 20%;}
+#search{margin-top: 8px;
+    margin-bottom: 30px;
+    padding: 5px 28px;
+    color: #ffffff;
+    font-family: "Cairo", sans-serif;
+    background: #7fad39;
+    text-transform: uppercase;}
 
 #banner{grid-column: 3/6;
-grid-row: 3;}
+grid-row: 3;
+background-image:url(banner.jpg);
+padding-left: 75px;
+padding-top: 100px;
+}
+
+#fresh{color: green;
+font-size: 15px;
+font-family: "Cairo",sans-serif;}
+#vegetables{font-size: 46px;
+line-height: 52px;
+font-weight: 700;
+color: #252525;
+font-family: "Cairo", sans-serif;}
+#Pickup{font-size: 15px;
+font-family: "Cairo", sans-serif;}
+#shopnow{width:20%;
+    padding: 10px 28px;
+    font-size: 14px;
+    color: #ffffff;
+    font-family: "Cairo", sans-serif;
+    font-weight: 700px;
+    background: #7fad39;
+    }
 
 #prod01{grid-row: 4;
-grid-column: 2;}
+grid-column: 2;
+background-image: url(cat-2.jpg);
+font-size: 20px;
+display: flex;
+justify-content: center;
+padding-top:220px;
+text-transform: uppercase;
+font-weight: 700;
+}
 
 #prod02{grid-row: 4;
- grid-column: 3;}
+ grid-column: 3;
+ background-image: url(cat-1.jpg);
+ font-size: 20px;
+ display: flex;
+ justify-content: center;
+ padding-top:220px;
+ text-transform: uppercase;
+ font-weight: 700;}
     
 #prod03{grid-row: 4;
-    grid-column: 4;}
+    grid-column: 4;
+    background-image: url(cat-3.jpg);
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    padding-top:220px;
+    text-transform: uppercase;
+    font-weight: 700;}
         
 #prod04{grid-row: 4;
-    grid-column: 5;}
+    grid-column: 5;
+    background-image: url(cat-4.jpg);
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    padding-top:220px;
+    text-transform: uppercase;
+    background-color: rgb(255, 255, 255);
+    font-weight: 700;}
 
+    #titulo{grid-column: 3/6;
+        display: flex;
+        justify-content: center;
+        align-content: space-between;
+        padding-bottom: 15px;
+        margin: auto;
+        gap: 2%;
+    font-size: 20px;
+padding-top: 20px;}
+    
+    #titulo2{grid-column: 3/6;
+        display: flex;
+        justify-content: center;
+    font-size: 35px;
+padding-top: 30px;
+font-weight: 800;}
 
 #produtos{display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 270px 100px 270px 100px;
     width: 60.5%;
-    margin: auto;
-    gap: 2%;
+    margin-left: 250px;
+    gap: 2%;       
 }
 #fontes{display: flex;
-    justify-content: center;}
+justify-content: center;
+}
+
 #nav-drop{ display: flex;
 list-style: none;
 justify-content: space-between;
@@ -83,3 +190,87 @@ align-items: center;
 }
 #drop:hover>#menu-drop{opacity: 1;
 z-index: 10;}
+#banners{display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    grid-template-rows: 10px 50px 10px 100px;
+    width: 60.5%;
+    margin-left: 250px;
+    gap: 2%;}
+#produtos2{display: flex;}
+#latest{margin-left: 350px;
+padding-top: 150px;
+font-size: 23px;
+font-weight:800;}
+#crab{font-size: 15px;
+display: flex;
+padding-top: 15px;
+font-weight: 300;}
+#top{margin-left: 100px;
+    padding-top: 150px;
+    font-size: 23px;
+    font-weight:800;}
+#review{margin-left: 100px;
+    padding-top: 150px;
+    font-size: 23px;
+    font-weight:800;}
+
+#fromtheblog{
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    font-weight: 800;
+    padding-top: 30px;}
+#blog{margin-left: 300px;
+    margin-right: 300px;
+    display: flex;
+    gap: 3%;
+    padding-top: 60px;}
+#verdin{background: #7fad39;
+    position: absolute;
+    height: 4px;
+    width: 80px;
+    margin-left: 800px;
+    margin-right: 400px;}
+#blogtitle{font-weight: 600;
+    font-size: 19px;
+    padding-bottom: 8px;
+    padding-top: 30px;}
+#textinho{padding-bottom: 80px;}
+
+#descricao{display: flex;
+    background-color: #F3F6FA;
+    padding-top: 80px;
+    width: 100%;
+    height: 343.379px;}
+#part1{margin-left: 300px;
+    line-height:40px}
+#Useful{line-height:30px;
+margin-left: 100px;}
+#whoweare{line-height:30px;
+    margin-left: 100px;
+padding-top: 30px;}
+#join{line-height:30px;
+    margin-left: 100px;}
+#enter{padding-top: 2px;
+display: flex;
+background-color: white;
+padding-left: 10px;
+height: 40px;}
+#subscribe{margin-left: 200px;
+    font-size: 15px;
+    color: #ffffff;
+    font-family: "Cairo", sans-serif;
+    font-weight: 900px;
+    background: #7fad39;
+    text-transform: uppercase;
+    width: 100px;
+    padding-left: 17px;}
+#descricao2{display: flex;
+background-color: #F3F6FA;
+height: 80px;}
+#copyright{font-size: 15px;
+padding-left: 300px;
+opacity: 50%;}
+#svgheart{height: 18px;}
+#imagem{padding-left: 250px;
+}
